# openpecha_data_cataloger

./: .gitignore  README.md  pyproject.toml  test.csv
.github/workflows/: CI.yml
DATA/: P_annotation_content_error_log.txt  openpecha_data_repo_names.txt
DATA/annotation_content_reports/: D_annotation_content_report.csv  D_batch.csv  I_batch_error.txt  O_annotation_content_error_log.txt  O_annotation_content_report.csv  O_batch.csv  P_annotation_content_error_log.txt  others_batch_error.txt
DATA/annotation_content_reports/I_batch/: error_ids.txt
DATA/annotation_content_reports/P_batch/: error_ids.txt  errors.txt
DATA/annotation_content_reports/others_batch/: errors.txt
DATA/folder_structure_reports/: D_batch.csv  I_batch.csv  O_batch.csv
DATA/folder_structure_reports/others_batch/: errors.txt  others_batch.csv
DATA/meta_data_reports/I_batch/: error_ids.txt  errors.txt
DATA/meta_data_reports/P_batch/: errors.txt
DATA/meta_data_reports/others_batch/: error_ids.txt  errors.txt
DATA/opf_batches/: Others_batch.txt  pechas_starting_with_D.txt  pechas_starting_with_O.txt
DATA/opf_pechas_batch/: I_opf_pechas.txt  P_opf_pechas.txt
REPORTS/: openpecha_data_repo_classified.json  opf_pechas.txt
REPORTS/meta_data_reports/: D_batch.csv  O_batch.csv
src/openpecha_data_cataloger/: annotation_cataloger.py  cataloger.py  config.py  pecha_repo_classifier.py  utility.py
tests/: config.py  test_annotation_content_report_generator.py  test_example.py  test_folder_structure_report_generator.py  test_meta_data_report_generator.py
tests/pechas/: meta_data.csv
(+26 files in other folders)
